# LR6

Task_1/: CMakeLists.txt  main.cpp  numbers.cpp  numbers.h  test_numbers.cpp
Task_2/: CMakeLists.txt  main.cpp  test_vowel_count.cpp  vowel_count.cpp  vowel_count.h
Task_3/: CMakeLists.txt  main.cpp  symmetric_check.cpp  symmetric_check.h  test_symmetric_check.cpp
